# fern

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  split_views.py
.agents/: AGENTS.md
.github/workflows/: rust-ci.yml
apple/Fern.xcodeproj/: project.pbxproj
apple/Fern.xcodeproj/xcshareddata/xcschemes/: Fern.xcscheme
apple/FernTests/: AppStoreTests.swift  FernTests.swift
apple/Shared/: AppStore.swift  ContentView.swift  DragDropModels.swift  FernApp 2.swift  FernApp.swift  MainContentView.swift  fern_core.swift  fern_coreFFI.modulemap
apple/Shared/Outline/: FernOutlineView.swift  OutlineItem.swift
apple/Shared/Views/Area/: AreaDetailView.swift
apple/Shared/Views/Core/: DropHandlers.swift  MainContentView.swift  TrashView.swift
apple/Shared/Views/Project/: ProjectDetailView.swift
apple/Shared/Views/Sidebar/: SidebarItemView.swift
apple/Shared/Views/Task/: AnytimeView.swift  CreateTaskSheet.swift  GroupedItemView.swift  GroupedTasksView.swift  InboxView.swift  LogbookView.swift  SomedayView.swift  TaskDetailView.swift  TaskRowView.swift  TodayView.swift  (+1 more)
apple/Shared/include/: fern_coreFFI.h
apple/scripts/: build_xcframework.sh
core/: Cargo.toml
core/src/: api.rs  database.rs  lib.rs  models.rs
core/src/api/: area_api.rs  mod.rs  project_api.rs  task_api.rs
core/src/database/: area_repo.rs  mod.rs  project_repo.rs  task_repo.rs
core/src/models/: area.rs  mod.rs  project.rs  task.rs
docs/: CONTEXT.md  ROADMAP.md  SPECIFICATIONS.md  TESTING.md  WORKFLOW.md
docs/adr/: 0001-choix-sqlite-local-first.md
(+2 files in other folders)
